--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <section id="section1">
             <div id="work.asp">
              <h1 id="anchor1">My Work:</h1>
-             <a href="https://commons.wikimedia.org/wiki/File:Red_Color.jpg">
+             <a href="http://24.199.69.101/">
              <p style="line-height:4.5em;">application 1</p>
-             <img src="assets\red.jpg" alt="Red">
+             <img src="assets\SnipCooking.JPG"alt="Red">
             </div>
         </section>
 
