--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
              <h1 id="anchor1">My Work:</h1>
              <a href="http://24.199.69.101/">
              <p style="line-height:4.5em;">application 1</p>
-             <img src="assets\SnipCooking.JPG"alt="Red">
+             <img src="SnipCooking.JPG"alt="Red">
             </div>
         </section>
 
